[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# name it as your package name
name = "quanttide-collab-agents"
# semetric versions
version = "0.1.0-alpha.1"
# describe the package within one sentence
description = "QuantTide Collaboration Agents"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.10'
dependencies = [
]
# dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/quanttide/quanttide-collab-agents"
Repository = "https://github.com/quanttide/quanttide-collab-agents.git"
Issues = "https://github.com/quanttide/quanttide-collab-agents/issues"
Changelog = "https://github.com/quanttide/quanttide-collab-agents/blob/main/CHANGELOG.md"

[project.license]
# create your license and name it as "LICENSE"
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm.build]
includes = [
    "quanttide_collab_agents",
]

[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.1",
    "volcengine-python-sdk>=1.0.111",
    "httpx>=0.28.0",
    "pydantic>=2.10.2",
]
